--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,3 +1,13 @@
 #login-form{
     border: 1px solid;
+    max-width: 400px;
+}
+
+#login-button{
+    width: 150px;
+}
+
+#login-button:hover{
+    background-color: black;
+    color: white;
 }
