--- a/src/Components/Signup/SignUp.css
+++ b/src/Components/Signup/SignUp.css
@@ -1,10 +1,12 @@
 #signup-form{
     max-width: 500px;
-    margin: 10px auto;
+    margin: 20px auto;
+    padding: 10px;
 }
 
 #create-button{
     padding: 10px;
+    min-width: 200px;
 }
 
 #create-button:hover{
