--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -10,3 +10,19 @@
     background-color: black;
     color: white;
 }
+
+.form-control{
+    border: 1px solid;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-radius: 0px;
+    border-color: black;
+    outline: 0px;
+}
+
+.form-control:focus{
+    box-shadow: none;
+    border-color: none;
+    border-bottom: 1px solid black;
+}
