--- a/src/Components/Store/store.css
+++ b/src/Components/Store/store.css
@@ -45,6 +45,11 @@
     color: white;
 }
 
+#pagination{
+    max-width: 250px;
+    margin: 10px;
+}
+
 @media  screen and (max-width: 600px) {
 
     #search-bar-filter{
