--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,10 +7,14 @@
 }
 
 #nav-bar{
-    padding: 21px;
+    padding: 20px;
 }
 
 #logo{
     height: 35px;
     width: 75px;
+}
+
+.nav-link{
+    color: white;
 }
