--- a/src/Components/Product/product.css
+++ b/src/Components/Product/product.css
@@ -18,3 +18,10 @@
     top: 50%;
     right: 5%;
 }
+
+.carousel-image .image-numbers{
+    position: absolute;
+    bottom: 5%;
+    color: white;
+    left: 50%;
+}
