add more sign up methods

--- a/src/Components/Signup/SignUp.css
+++ b/src/Components/Signup/SignUp.css
@@ -29,7 +29,7 @@
     outline: 0px;
 }
 
-.form-control, phoneput{
+.form-control, phoneInput{
     border: 1px solid;
     border-top: none;
     border-right: none;
