--- a/src/Components/Signup/SignUp.css
+++ b/src/Components/Signup/SignUp.css
@@ -48,3 +48,17 @@
 .signup-div{
     max-width: 500px;
 }
+
+#google-btn{
+    background-color: #4285F4;
+    color: white;
+}
+
+#apple-logo{
+    fill: white;
+}
+
+#apple-btn{
+    background-color: black;
+    color: white;
+}
