format project tile

--- a/src/Components/Store/store.css
+++ b/src/Components/Store/store.css
@@ -6,6 +6,16 @@
     z-index: 0;
 }
 
+#thumbnail{
+    max-width: 200px;
+    max-height: 200px;
+    object-fit: contain;
+}
+
+.checked{
+    color: rgb(255,255,0);
+}
+
 #search{
     border-top: 1px solid;
     border-left: 1px solid;
