--- a/src/Components/Store/store.css
+++ b/src/Components/Store/store.css
@@ -3,13 +3,17 @@
 }
 
 #thumbnail{
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 280px;
+    max-height: 280px;
     object-fit: contain;
 }
 
 .checked{
     color: rgb(255,255,0);
+}
+
+.unchecked{
+    fill: black;
 }
 
 #search{
@@ -57,8 +61,9 @@
 
 @media  screen and (max-width: 500px) {
     #thumbnail{
-        width: 130px;
-        height: 130px;
+        max-width: 130px;
+        max-height: 130px;
+        object-fit: contain;
     }
 
     .tile-text{
