--- a/src/Components/Store/store.css
+++ b/src/Components/Store/store.css
@@ -3,8 +3,8 @@
 }
 
 #thumbnail{
-    max-width: 280px;
-    max-height: 280px;
+    max-width: 200px;
+    max-height: 200px;
     object-fit: contain;
 }
 
@@ -61,9 +61,8 @@
 
 @media  screen and (max-width: 500px) {
     #thumbnail{
-        max-width: 130px;
-        max-height: 130px;
-        object-fit: contain;
+        width: 130px;
+        height: 130px;
     }
 
     .tile-text{
