--- a/src/Components/Store/store.css
+++ b/src/Components/Store/store.css
@@ -61,12 +61,17 @@
 
 @media  screen and (max-width: 500px) {
     #thumbnail{
-        width: 130px;
-        height: 130px;
+        max-width: 20px;
+        max-height: 20px;
+        object-fit: cover;
     }
 
     .tile-text{
         font-size: 15px;
+    }
+
+    #project-tile{
+        margin-bottom: 1px;
     }
 
 }
