add line clamp to product tile

--- a/src/Components/Store/productcard.css
+++ b/src/Components/Store/productcard.css
@@ -19,7 +19,7 @@
     }
 
     #card-title{
-        white-space: nowrap;
+        white-space: wrap;
         overflow: hidden;
         text-overflow: ellipsis;
         max-width: 160px;
