--- a/src/Components/Store/store.css
+++ b/src/Components/Store/store.css
@@ -64,7 +64,7 @@
         width: 135px;
         height: 125px;
         object-fit: contain;
-        background-color: #E8E8E8;
+        background-color: #f2f2f2;
     }
 
     #tile-title{
