--- a/src/Components/Signup/SignUp.css
+++ b/src/Components/Signup/SignUp.css
@@ -50,8 +50,8 @@
 }
 
 #google-btn{
-    background-color: #4285F4;
-    color: white;
+    background-color: white;
+    color: #4285F4;
 }
 
 #apple-logo{
