--- a/src/Components/Store/productcard.css
+++ b/src/Components/Store/productcard.css
@@ -1,6 +1,6 @@
 #product-card{
-    min-width: 160px;
-    max-width: 250px;
+    width: 160px;
+    width: 250px;
     margin: auto;
     border: 0px;
 }
