add margin-y in previous and similar items divs

--- a/src/Components/Product/product.css
+++ b/src/Components/Product/product.css
@@ -28,6 +28,15 @@
     left: 50%;
 }
 
+.no-scrollbar::-webkit-scrollbar{
+    display: none;
+}
+
+.no-scrollbar{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 @media screen and (max-width: 480px) {
     #title{
         font-size: x-large;
