add no scroll classt to deals.js

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -5,6 +5,15 @@
     background-size: cover;
 }
 
+.no-scrollbar::-webkit-scrollbar{
+    display: none;
+}
+
+.no-scrollbar{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 #headline-message{
     max-width: 500px;
 }
