--- a/src/Components/Store/productcard.css
+++ b/src/Components/Store/productcard.css
@@ -22,7 +22,10 @@
         white-space: wrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 160px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
 
     .icon{
