--- a/src/Components/Product/product.css
+++ b/src/Components/Product/product.css
@@ -28,13 +28,21 @@
     left: 50%;
 }
 
-.no-scrollbar::-webkit-scrollbar{
-    display: none;
+.scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
 }
 
-.no-scrollbar{
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+.scrollbar::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.scrollbar::-webkit-scrollbar-thumb
+{
+	background-color: #555;
 }
 
 @media screen and (max-width: 480px) {
