make categories section scrollable

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -28,3 +28,19 @@
     max-height: 150px;
     max-width: 150px;
 }
+
+@media screen and (max-width: '600px') {
+    .no-scrollbar::-webkit-scrollbar{
+        display: initial;
+    }
+    
+    .no-scrollbar{
+        -ms-overflow-style: initial;
+        scrollbar-width:initial;
+    }
+
+    .category-image{
+        max-height: 120px;
+        max-width: 120px;
+    }
+}
