--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -16,11 +16,18 @@ input:focus {
 }
 
 #thumbnail{
-    max-width: 150px;
-    max-height: 150px;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 #expandable-input{
     display: inline-block;
     max-width: 30px;
+}
+
+@media screen and (max-width: 476px) {
+    #thumbnail{
+        max-width: 100px;
+        max-height: 100px;
+    }
 }
