--- a/src/Components/Product/product.css
+++ b/src/Components/Product/product.css
@@ -1,5 +1,5 @@
 #carousel{
-    max-width: 650px;
+    max-width: 600px;
 }
 
 .carousel-image{
@@ -26,6 +26,10 @@
     bottom: 5%;
     color: white;
     left: 50%;
+}
+
+#item-info-div{
+    min-width: 400px;
 }
 
 .scrollbar::-webkit-scrollbar-track
