--- a/src/Components/Product/product.css
+++ b/src/Components/Product/product.css
@@ -70,6 +70,9 @@
         font-size: x-large;
     }
 
+    #item-info-div{
+        width: fit-content;
+    }
 
     #info-div{
         margin-left: 0px;
