--- a/src/Components/Checkout/checkout.css
+++ b/src/Components/Checkout/checkout.css
@@ -1,10 +1,15 @@
 #payment-types{
     margin:auto;
-    max-width: 200px;
+    max-width: 250px;
 }
 
 #amount-info{
     margin:auto;
     max-width: 300px;
     padding-left: 20px;
+}
+
+#card-form{
+    margin:auto;
+    max-width: 350px;
 }
