--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -35,6 +35,12 @@
     display: none;
 }
 
+#profile-pic{
+    border-radius: 50%;
+    max-height: 30px;
+    max-width: 30px;
+}
+
 @media screen and (max-width: 768px) {
     #side-menu, #search-icon{
         display: initial;
