--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -23,6 +23,23 @@
     width: 250px;
 }
 
+#cart{
+    position: relative;
+    display: inline-block;
+}
+
+#cart-count{
+    background-color: red;
+    border-radius: 100%;
+    font-size: 10px;
+}
+
+#cart #cart-count{
+    position:absolute;
+    top:-20%;
+    left: 40%;
+}
+
 #side-nav{
     background-color: black;
     width: 230px;
